fix spacing for filter count

--- a/services/app-web/src/pages/StateDashboard/StateDashboard.module.scss
+++ b/services/app-web/src/pages/StateDashboard/StateDashboard.module.scss
@@ -47,7 +47,3 @@
         padding-bottom: 0;
     }
 }
-
-.filterCount {
-    padding-top: 0;
-}
